Update HorseCard component to use localized condition text and add translation for condition in English and Turkish locales

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,7 +18,8 @@
   "horse": {
     "stable_roster": "Stable Roster",
     "horses": "Horses",
-    "no_horses": "No horses in stable"
+    "no_horses": "No horses in stable",
+    "condition": "Condition"
   },
   "program": {
     "title": "Race Program",
