--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -18,7 +18,8 @@
   "horse": {
     "stable_roster": "Ahır Kadrosu",
     "horses": "At",
-    "no_horses": "Ahırda at yok"
+    "no_horses": "Ahırda at yok",
+    "condition": "Durum"
   },
   "program": {
     "title": "Yarış Programı",
